--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,19 +1,108 @@
+@import url("https://fonts.googleapis.com/css?family=Dosis:300,500,700");
 *,
 *::after {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Dosis', sans-serif;
+  color: #555; }
+
+html {
+  font-size: 62.5%; }
 
 .App {
-  width: 45rem;
-  margin: 0 auto;
-  border: 1px solid red; }
+  max-width: 90rem;
+  min-height: 98vh;
+  margin: 0 auto; }
 
 .Navigation {
-  background: #d6d6d6; }
-  .Navigation ul {
-    display: flex;
-    list-style: none; }
-    .Navigation ul li, .Navigation ul a {
-      color: red;
-      text-decoration: none;
-      margin-left: 10px; }
+  background: transparent;
+  border-bottom: 2px solid rgba(228, 228, 228, 0.25);
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 1rem; }
+
+.Navigation__item {
+  color: #555;
+  text-decoration: none;
+  font-size: 2rem;
+  margin: 0 1rem; }
+
+.Navigation__item--brand {
+  font-size: 3rem;
+  font-weight: 700;
+  flex: 1; }
+
+.Navigation__item--action, .Navigation__item--action--signout, .Navigation__item--action--signin, .Navigation__item--action--signup {
+  background: none;
+  padding: 0.6rem 1rem;
+  font-size: 1.6rem;
+  margin: 0;
+  border: 1px solid #555;
+  outline: none;
+  transition: all 0.1s ease; }
+  .Navigation__item--action:hover, .Navigation__item--action--signout:hover, .Navigation__item--action--signin:hover, .Navigation__item--action--signup:hover {
+    background: #555;
+    color: white; }
+  .Navigation__item--action--signout {
+    border-radius: 3px; }
+  .Navigation__item--action--signin {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px; }
+  .Navigation__item--action--signup {
+    border-left: none;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px; }
+
+.Section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 2rem; }
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 35rem;
+  margin: 1.5rem; }
+  .Form__input {
+    width: 100%;
+    outline: none;
+    border: 1px solid #e4e4e4;
+    border-radius: 3px;
+    font-size: 1.8rem;
+    height: 5rem;
+    margin-bottom: 1.2rem;
+    padding: 1rem; }
+  .Form__error {
+    margin: 1rem 0 2.5rem 0;
+    font-size: 1.8rem;
+    background: rgba(184, 22, 22, 0.61);
+    padding: 0.4rem;
+    color: white; }
+  .Form__link {
+    font-size: 1.8rem;
+    margin: 0.2rem 0; }
+
+.Button, .Button--signin,
+.Button--signup {
+  border: 1px solid #555;
+  border-radius: 3px;
+  background: none;
+  cursor: pointer; }
+
+.Button--signin,
+.Button--signup {
+  height: 4.5rem;
+  width: 10rem;
+  font-size: 2rem;
+  padding: 0.3rem 1rem;
+  margin: 1.5rem 0;
+  transition: all 0.3s ease; }
+  .Button--signin:disabled,
+  .Button--signup:disabled {
+    border-color: #e4e4e4;
+    color: #e4e4e4; }
