segregate pages by permission status

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -57,10 +57,17 @@ html {
 
 .Section {
   display: flex;
+  min-height: 80vh;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-size: 1.5rem;
   padding: 2rem; }
+  .Section__description {
+    width: 35rem;
+    text-align: center;
+    margin: 1.6rem 0;
+    font-size: 1.8rem; }
 
 .Form {
   display: flex;
@@ -88,21 +95,35 @@ html {
     margin: 0.2rem 0; }
 
 .Button, .Button--signin,
-.Button--signup {
+.Button--signup,
+.Button--passwordReset,
+.Button--passwordChange {
   border: 1px solid #555;
   border-radius: 3px;
   background: none;
-  cursor: pointer; }
+  cursor: pointer;
+  outline: none; }
 
 .Button--signin,
-.Button--signup {
+.Button--signup,
+.Button--passwordReset,
+.Button--passwordChange {
   height: 4.5rem;
-  width: 10rem;
+  min-width: 10rem;
   font-size: 2rem;
   padding: 0.3rem 1rem;
   margin: 1.5rem 0;
   transition: all 0.3s ease; }
+  .Button--signin:not([disabled]):hover,
+  .Button--signup:not([disabled]):hover,
+  .Button--passwordReset:not([disabled]):hover,
+  .Button--passwordChange:not([disabled]):hover {
+    background: #555;
+    color: white; }
   .Button--signin:disabled,
-  .Button--signup:disabled {
+  .Button--signup:disabled,
+  .Button--passwordReset:disabled,
+  .Button--passwordChange:disabled {
     border-color: #e4e4e4;
-    color: #e4e4e4; }
+    color: #e4e4e4;
+    cursor: default; }
