integrate redux; replace Context API

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -10,6 +10,14 @@
 html {
   font-size: 62.5%; }
 
+.Main {
+  border: 1px dashed red;
+  display: flex;
+  min-height: 90vh;
+  flex-direction: column;
+  font-size: 1.5rem;
+  padding: 2rem; }
+
 .App {
   max-width: 90rem;
   min-height: 98vh;
