--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,5 +1,6 @@
 @import './base/settings';
 @import './base/base';
+@import './layout/Main';
 @import './layout/App';
 @import './layout/Navigation';
 @import './layout/Section';
