--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -4,5 +4,6 @@
 @import './layout/App';
 @import './layout/Navigation';
 @import './layout/Section';
+@import './layout/NotFound';
 @import './components/Form';
 @import './components/Button';
