--- a/src/styles/scss/layout/_Section.scss
+++ b/src/styles/scss/layout/_Section.scss
@@ -7,6 +7,11 @@
   font-size: 1.5rem; 
   padding: 2rem;
 
+  &__title {
+    font-size: 4.5rem;
+    margin-bottom: 1rem;
+  }
+
   &__description {
     width: 35rem;
     text-align: center;
