--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,8 +1,8 @@
 @import './base/settings';
 @import './base/base';
-@import './layout/Main';
 @import './layout/App';
 @import './layout/Navigation';
+@import './layout/Content';
 @import './layout/Section';
 @import './layout/NotFound';
 @import './components/Form';
