--- a/src/styles/scss/layout/_Navigation.scss
+++ b/src/styles/scss/layout/_Navigation.scss
@@ -7,6 +7,11 @@
   padding: 1rem;
 }
 
+.Navigation__greeting {
+  font-size: 2rem;
+  margin-right: 2rem;
+}
+
 .Navigation__item {
   color: $matt-grey;
   text-decoration: none;
@@ -17,6 +22,7 @@
 .Navigation__item--brand {
   font-size: 3rem;
   font-weight: 700;
+  padding-bottom: 0.3rem;
   flex: 1;
 }
 
