--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -4,6 +4,7 @@
 @import './layout/Navigation';
 @import './layout/Content';
 @import './layout/Section';
+@import './layout/Footer';
 @import './page/NotFound';
 @import './page/About';
 @import './components/Form';
