--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -12,7 +12,7 @@ html {
 
 .App {
   max-width: 110rem;
-  min-height: 98vh;
+  min-height: 99vh;
   margin: 0 auto; }
 
 .Navigation {
@@ -62,7 +62,6 @@ html {
 
 .Content {
   display: flex;
-  min-height: 90vh;
   flex-direction: column;
   font-size: 1.5rem;
   padding: 2rem; }
@@ -83,6 +82,27 @@ html {
     text-align: center;
     margin: 1.6rem 0;
     font-size: 1.8rem; }
+
+.Footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.8rem;
+  padding: 2rem; }
+  .Footer span {
+    display: inline-block;
+    color: #555;
+    background: white;
+    border: 1px solid #555;
+    padding: 0.2rem 0.5rem;
+    transition: transform 0.2s ease; }
+    .Footer span:hover {
+      transform: translateY(-0.4rem); }
 
 .NotFound__title {
   font-size: 15rem;
