--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -10,6 +10,9 @@
 html {
   font-size: 62.5%; }
 
+a {
+  text-decoration: none; }
+
 .App {
   max-width: 110rem;
   min-height: 99vh;
@@ -23,10 +26,6 @@ html {
   list-style: none;
   padding: 1rem; }
 
-.Navigation__greeting {
-  font-size: 2rem;
-  margin-right: 2rem; }
-
 .Navigation__item {
   color: #555;
   text-decoration: none;
@@ -38,6 +37,11 @@ html {
   font-weight: 700;
   padding-bottom: 0.3rem;
   flex: 1; }
+
+.Navigation__item--account {
+  border-left: 1.5px solid;
+  padding-left: 2rem;
+  line-height: 1; }
 
 .Navigation__item--action, .Navigation__item--action--signout, .Navigation__item--action--signin, .Navigation__item--action--signup {
   background: none;
@@ -51,20 +55,32 @@ html {
     background: #555;
     color: white; }
   .Navigation__item--action--signout {
-    border-radius: 3px; }
+    border-radius: 1px; }
   .Navigation__item--action--signin {
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px; }
+    margin-left: 1.5rem;
+    border-top-left-radius: 1px;
+    border-bottom-left-radius: 1px; }
   .Navigation__item--action--signup {
     border-left: none;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px; }
+    border-top-right-radius: 1px;
+    border-bottom-right-radius: 1px; }
 
 .Content {
   display: flex;
-  flex-direction: column;
   font-size: 1.5rem;
-  padding: 2rem; }
+  padding: 2rem 0; }
+
+.Content__greeting {
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #e4e4e4;
+  width: 28rem;
+  margin-right: 2rem; }
+  .Content__greeting__message {
+    padding: 1rem; }
 
 .Section {
   display: flex;
@@ -92,7 +108,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   padding: 2rem; }
   .Footer span {
     display: inline-block;
@@ -103,6 +119,44 @@ html {
     transition: transform 0.2s ease; }
     .Footer span:hover {
       transform: translateY(-0.4rem); }
+
+.JarList__container {
+  border: 1px solid #e4e4e4;
+  flex: 1; }
+
+.JarList__header {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  background: #f1f1f1; }
+
+.JarList__header__title {
+  flex: 1; }
+
+.JarList__header__controls {
+  display: inline-block; }
+
+.JarList__header__filter {
+  margin-left: 1rem; }
+
+.JarList__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-top: 1px solid #e4e4e4;
+  height: 10rem;
+  padding: 0.5rem 1rem; }
+  .JarList__item--title {
+    font-size: 2.2rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem; }
+  .JarList__item--username {
+    font-size: 1.6rem; }
+  .JarList__item--meta {
+    display: flex;
+    justify-content: flex-end; }
+    .JarList__item--meta span {
+      margin: 0 0.5rem; }
 
 .NotFound__title {
   font-size: 15rem;
@@ -157,7 +211,7 @@ html {
 
 .Button {
   border: 1px solid #555;
-  border-radius: 3px;
+  border-radius: 1px;
   background: none;
   cursor: pointer;
   outline: none;
