--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -5,6 +5,7 @@
 @import './layout/Content';
 @import './layout/Section';
 @import './layout/Footer';
+@import './layout/JarList';
 @import './page/NotFound';
 @import './page/About';
 @import './components/Form';
