--- a/src/styles/scss/layout/_Content.scss
+++ b/src/styles/scss/layout/_Content.scss
@@ -1,6 +1,20 @@
 .Content {
   display: flex;
-  flex-direction: column;
   font-size: 1.5rem; 
-  padding: 2rem;
+  padding: 2rem 0;
+}
+
+.Content__greeting {
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid $faint-grey;
+  width: 28rem;
+  margin-right: 2rem;
+
+  &__message {
+    padding: 1rem;
+  }
 }
