--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -8,5 +8,6 @@
 @import './layout/JarList';
 @import './page/NotFound';
 @import './page/About';
+@import './page/FormPage';
 @import './components/Form';
 @import './components/Button';
