--- a/src/styles/scss/layout/_Content.scss
+++ b/src/styles/scss/layout/_Content.scss
@@ -1,7 +1,14 @@
 .Content {
   display: flex;
+  flex-direction: column;
   font-size: 1.5rem; 
-  padding: 2rem 0;
+  padding: 1rem;
+
+  @media (min-width: 1150px) {
+    flex-direction: row;
+    font-size: 1.5rem; 
+    padding: 2rem 0;
+  }
 }
 
 .Content__greeting {
@@ -11,10 +18,15 @@
   justify-content: center;
   align-items: center;
   border: 1px solid $faint-grey;
-  width: 28rem;
-  margin-right: 2rem;
+  width: 100%;
+  margin-bottom: 1rem;
 
   &__message {
     padding: 1rem;
+  }
+
+  @media (min-width: 1150px) {
+    margin-right: 2rem;
+    width: 28rem;
   }
 }
