--- a/src/styles/scss/layout/_Footer.scss
+++ b/src/styles/scss/layout/_Footer.scss
@@ -8,7 +8,11 @@
   flex-direction: column;
   align-items: center;
   font-size: 1.5rem;
-  padding: 2rem;
+  padding: 1rem;
+
+  @media (min-width: 1150px) {
+    padding: 2rem;
+  }
 
   span {
     display: inline-block;
