--- a/src/styles/scss/page/_About.scss
+++ b/src/styles/scss/page/_About.scss
@@ -7,6 +7,9 @@
   font-size: 2.5rem;
   text-align: center;
   line-height: 1.5;
-  width: 50%;
   margin-bottom: 2rem;
+
+  @media (min-width: 1150px) {
+    width: 50%;
+  }
 }
