add ViewJar page and adjust styles

--- a/src/styles/scss/components/_Form.scss
+++ b/src/styles/scss/components/_Form.scss
@@ -2,8 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 35rem;
-  margin: 1.5rem;
+  min-width: 30rem;
+  margin: 1rem;
+
+  &__heading {
+    font-size: 3rem;
+    margin: 1.5rem;
+  }
 
   &__input {
     width: 100%;
@@ -30,6 +35,6 @@
   }
 
   textarea {
-    min-height: 25rem;
+    min-height: 30rem;
   }
 }
