--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -6,8 +6,8 @@
 @import './layout/Section';
 @import './layout/Footer';
 @import './layout/JarList';
+@import './layout/JarView';
 @import './page/NotFound';
 @import './page/About';
-@import './page/FormPage';
 @import './components/Form';
 @import './components/Button';
