--- a/src/styles/scss/layout/_JarList.scss
+++ b/src/styles/scss/layout/_JarList.scss
@@ -1,6 +1,7 @@
 .JarList__container {
   border: 1px solid $faint-grey;
-  flex: 1;
+  width: 100%;
+  align-self: flex-start;
 }
 
 .JarList__header {
@@ -37,7 +38,7 @@
   }
 
   &--username {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
   }
 
   &--meta {
